--- a/frontend/src/container/Home/Home.css
+++ b/frontend/src/container/Home/Home.css
@@ -10,3 +10,16 @@
 .images-box > .img-container {
   height: 200px;
 }
+
+
+@media screen and (max-width: 568px){
+  .images-box{
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (min-width: 569px) and (max-width: 800px){
+  .images-box{
+    grid-template-columns: 1fr 1fr;
+  }
+}
