--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -99,3 +99,26 @@ footer .copyright {
   text-align: center;
   font-size: 12px;
 }
+
+@media screen and (max-width: 568px){
+  footer .footer-body{
+    grid-template-columns: 1fr;
+  }
+
+  footer .footer-body .website-infos .socials{
+    justify-content: center;
+    gap: 1rem;
+    
+  }
+}
+
+@media screen and (min-width: 569px) and (max-width: 800px){
+  footer .footer-body{
+    grid-template-columns: 1fr 1fr 1fr;
+  } 
+
+  footer .footer-body .website-infos .socials{
+    justify-content: center; 
+    gap: 1rem;
+  }
+}
