--- a/frontend/src/components/TabmenuProducts/tabmenuProducts.css
+++ b/frontend/src/components/TabmenuProducts/tabmenuProducts.css
@@ -10,3 +10,15 @@
   gap: 2rem;
   margin-top: 2rem;
 }
+
+@media screen and (max-width: 568px){
+  .tabmenu-products .products{
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (min-width: 569px) and (max-width: 800px){
+  .tabmenu-products .products{
+    grid-template-columns: 1fr 1fr;
+  }
+}
